s3 bucket name change

--- a/.env
+++ b/.env
@@ -5,34 +5,51 @@ JWT_SECRET = Ntd2rKAalPFa0fu4bR1C0eiNseAWp3FI
 SECUREPORT = 3009
 MJ_APIKEY_PUBLIC = 68292d37d4af5d937e3ca58aeb83dd71
 MJ_APIKEY_PRIVATE = 72b7d56bde97dc1ee06c91e6649c83c2
-PG_MERCHANT_ID=SG1061
-PG_API_KEY=C5D8A96F9EF4CA9A20DD51D1ECEA9D
+
+PG_MERCHANT_ID= null
+# SG1061
+
+PG_API_KEY= null
+# C5D8A96F9EF4CA9A20DD51D1ECEA9D
 
 
-PG_SECRET_KEY= <your_secret_key>
+PG_SECRET_KEY= <null>
+#  <your_secret_key>
 
 
-PG_BASE_URL=https://smartgatewayuat.hdfcbank.com
+PG_BASE_URL= null
+# https://smartgatewayuat.hdfcbank.com
 
 
-Pick_Up_Postal=400079
-pickup_location=4TH FLOOR, A WING, UNIT NO 411, KAILASH BUSINESS PARK,VEER SAWARKAR MARG, HIRANANDANI LINK ROAD,VIKHROLI WEST, MUMBAI, Mumbai City, Maharashtra, 400079
+Pick_Up_Postal= null
+# 400079
+
+pickup_location= null
+#4TH FLOOR, A WING, UNIT NO 411, KAILASH BUSINESS PARK,VEER SAWARKAR MARG, HIRANANDANI LINK ROAD,VIKHROLI WEST, MUMBAI, Mumbai City, Maharashtra, 400079
 
 
-mixxoMail=infomixxo@gmail.com
+ecomMail=pratik@4ibiz.in
 
 
-S3_ACCESS_KEY=AKIAQIJRRXUCLAKFIVBI
-S3_SECRET_KEY=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
+S3_ACCESS_KEY=AKIA5XOXCOHJQ75UXRG5
+S3_SECRET_KEY=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
 
 
-AWS_SES_accessKeyId=AKIAQIJRRXUCFDPJZ6PT
-AWS_SES_secretAccessKey=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
+AWS_SES_accessKeyId= null
+# AKIAQIJRRXUCFDPJZ6PT
+
+AWS_SES_secretAccessKey= null
+# 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
 
 
-shipRocket_email=harshal@4ibiz.in
-shipRocket_password=Mixxo@1234
-shipRocketUrl=https://apiv2.shiprocket.in/v1/external
+shipRocket_email= null
+# harshal@4ibiz.in
+
+shipRocket_password= null
+# Mixxo@1234
+
+shipRocketUrl= null
+# https://apiv2.shiprocket.in/v1/external
 
 
 # amazon_grant_type=
